[package]
name = "MindustryLangCompiler"
version = "0.1.0"
authors = ["philippe gueorguievskii <philippe.gueorguievskii@outlook.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies.lalrpop]
version = "0.19.1"
features = ["lexer"]

[dependencies]
lalrpop-util = "0.19.0"
regex = "1"